資料分析嵌入完成，新增優惠券發送按鈕、補發遊戲商品(待完成)

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -91,7 +91,7 @@
                                         <img id="preview-createimage" src="" class="w-100 border">
                                     </div>
                                 </div>
-                        <button  class="mt-3 btn btn-primary btn-block" name="submitButton" id="submitButton"
+                        <button type="submit" class="mt-3 btn btn-primary btn-block" name="submitButton" id="submitButton"
                                 style="width: 100%;">
                             儲存
                         </button>
@@ -148,20 +148,20 @@
                                 <div class="modal-body">
                                     <!--內容表單-->
                                     <div class="row">
-                                        <div class="col-md-6">
+                                        <div class="form-group">
                                             <label>ID</label>
                                             <input type="text" class="form-control" readonly disabled id="editor-id" name="BannerId">
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="form-group">
                                             <label>名稱</label>
                                             <input type="text" class="form-control" id="editor-name" name="Banner">
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="form-group">
                                             <label>發佈日期</label>
                                             <input type="date" class="form-control" id="editor-date" name="PublishDate">
                                             </select>
                                         </div>
-                                        <div class="col-md-12">
+                                        <div class="form-group">
                                             <label>圖片</label>
                                             <input type="file" class="form-control" id="editor-img" name="Image" accept="image/*">
                                         </div>
