--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -157,35 +157,36 @@
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="EditModalToggleLabel">編輯 Edit</h5>
+                                        <h5 class="modal-title" id="EditModalToggleLabel">編輯優惠券</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
+                                        <form>
                                         <!--內容表單-->
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="form-group">
                                                 <label>ID</label>
                                                 <input type="text" class="form-control" readonly disabled id="edit-id" name="CouponId">
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="form-group">
                                                 <label>名稱</label>
                                                 <input type="text" class="form-control" id="edit-name" name="CouponName">
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="form-group">
                                                 <label>內容</label>
                                                 <input type="text" class="form-control" id="edit-content" name="CouponContent">
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="form-group">
                                                 <label>到期日</label>
                                                 <input type="date" class="form-control" id="edit-expirydate" name="ExpiryDate">
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="form-group">
                                                 <label>總數量：</label>
                                                 <input type="text" class="form-control" id="edit-quantity" name="TotalQuantity">
                                             </div>
 
-                                            <div class="col-md-6">
+                                            <div class="form-group">
                                                 <label>是否可使用：</label>
                                                 <select class="form-select" id="edit-usable" name="Usable">
                                                     <option value="" selected disabled>請選擇狀態</option>
@@ -198,6 +199,7 @@
                                                     style="width: 100%;">
                                                 儲存
                                             </button>
+                                            </form>
                                         </div>
                                         <!--內容表單-->
                                     </div>
@@ -219,33 +221,46 @@
                                     <div class="modal-body">
                                         <!--內容表單-->
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <form>
+                                    <div class="form-group">
                                                 <label>ID</label>
                                                 <input type="text" class="form-control" readonly disabled>
                                             </div>
-                                            <div class="col-md-6">
+                                    <div class="form-group">
                                                 <label>會員名稱</label>
                                                 <input type="text" class="form-control">
                                             </div>
-                                            <div class="col-md-6">
+                                    <div class="form-group">
                                                 <label>會員帳號</label>
                                                 <input type="text" class="form-control">
                                             </div>
-                                            <div class="col-md-6">
+                                    <div class="form-group">
                                                 <label>發送數量</label>
                                                 <input type="text" class="form-control">
                                             </div>
-                                            <div class="col-md-6">
-                                                <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendCouponToAllMembers" id=" SendCouponToAllMembers"
+
+                                    <div class="form-group">
+                                        <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendToMember" id=" SendToMember"
+                                                style="width: 50%;">
+                                            發送
+                                        </button>
+
+                                    <div class="form-group">
+                                                <button type="submit" class="mt-3 btn btn-primary btn-block " name="SendCouponToAllMembers" id=" SendCouponToAllMembers"
                                                         style="width: 100%;">
                                                     發送優惠券給所有會員
                                                 </button>
                                             </div>
-                                            <div class="col-md-6">
-                                                <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendCouponToMembers" id=" SendCouponToMembers"
-                                                        style="width: 100%;">
-                                                    發送
-                                                </button>
+
+                                        <div class="form-group">
+                                            <button type="submit" class="mt-3 btn btn-primary btn-block " name="SendNotify" id=" SendNotify"
+                                                    style="width: 100%;">
+                                                發送到期提醒
+                                            </button>
+                                        </div>
+
+
+                                                </form>
                                             </div>
 
                                         </div>
@@ -319,9 +334,8 @@
                 {
                     "data": "couponId",
                     "render": function (data, type, row) {
-                        var sendUrl = '@Url.Action("SendCouponToMembers", "Bonus", new { area = "AdminCMS", id = "couponId" })';
-                        sendUrl = sendUrl.replace('couponId', row.couponId);
-                        return `<button class="btn btn-primary SendCouponToAllMembers" data-id="${row.couponId}" data-bs-toggle="modal">發送至所有會員</button>`
+                        var sendButton = `<button class="btn btn-primary" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#sendtoMember">發送</button>`;
+                        return sendButton;
                     }
                 },
                 {
@@ -450,7 +464,7 @@
                     if (response.success) {
                         Swal.fire({
                             icon: 'success',
-                            title: '編輯成功',
+                            title: '新增成功',
                             text: response.message
                         });
 
@@ -548,6 +562,7 @@
                             success: function (response) {
                                 if (response.success) {
                                     console.log("發送成功");
+                                    $('#sendtoMember').modal('hide');
                                 } else {
                                     console.log("發送失敗");
                                 }
