--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -56,6 +56,15 @@
         </div>
     </div>
 
+    <div class="row mt-3">
+        <div class="col-6 offset-6 text-end">
+            <button class="btn btn-success" data-bs-toggle="modal" href="#" role="button">
+                補發遊戲商品
+            </button>
+        </div>
+    </div>
+</div>
+
     <!---新增遊戲商品 modal-->
     <div class="modal fade" id="addGProductModalToggle" aria-hidden="true"
          aria-labelledby="exampleModalToggleLabel" tabindex="-1">
@@ -159,8 +168,8 @@
 
     <!---篩選類別-->
     <div class="container-fluid mt-4 mb-3">
-        <div class="row align-items-center">
-            類別篩選：
+    <div class="row align-items-center" style="margin-left:20px">
+              類別篩選：
             <div class="col d-flex justify-content-between">
                 <select class="form-select" id="categoryList">
                     <option value="" selected disabled>請選擇類別</option>
@@ -170,7 +179,9 @@
                         <option value="@category.CategoryName">@category.CategoryName</option>
                                 }
                 </select>
-            </div>
+        </div>
+        <div>
+            <button id="selectAllBtn">全選</button>
         </div>
     </div>
     <!---篩選類別-->
@@ -183,7 +194,9 @@
                     <thead>
                         <tr>
                             <!-- <th>序號</th> -->
-                            <th>ID</th>
+                            <th> </th>
+                            <th>勾選</th>
+                            <th>商品編號</th>
                             <th>名稱</th>
                             <th>類別</th>
                             <th>描述</th>
@@ -338,6 +351,20 @@
                 },
                 //載入欄位資料=================================
                 "columns": [
+                    {
+                    data: null,
+                    orderable: false,
+                    render: function (data, type, row, meta) {
+                        return '';
+                    }
+                    },
+                    {
+                    data: null, // Checkbox
+                    orderable: false,
+                    render: function (data, type, row, meta) {
+                        return `<input class="form-check-input" type="checkbox" data-id="${row.productId}">`;
+                    }
+                    },
                     { "data": "productId" },
                     { "data": "productName" },
                     { "data": "productCategoryId" },
