會員註冊新增DEMO按鈕 / 跳出視窗替換成 sweet alert

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -243,7 +243,7 @@
     <script src="~/js/jquery.superslides.min.js"></script>
     <script src="~/js/bootstrap-select.js"></script>
     <script src="~/js/inewsticker.js"></script>
-    <script src="~/js/bootsnav.js."></script>
+   @* <script src="~/js/bootsnav.js."></script>*@
     <script src="~/js/images-loded.min.js"></script>
     <script src="~/js/isotope.min.js"></script>
     <script src="~/js/owl.carousel.min.js"></script>
@@ -252,7 +252,7 @@
     <script src="~/js/contact-form-script.js"></script>
     <script src="~/js/custom.js"></script>
     <!--nav導覽與頁籤使用-->
-    <script src="~/js/myScript.js"></script>
+    @*<script src="~/js/myScript.js"></script>*@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 </body>
