-修正 gif動畫從中間撥放問題 -待修正 若連續兩抽 truefalse則會交替轉換導致顯示異常

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -20,11 +20,12 @@
                 <div id="gachaCCoinIcon"></div><p id="gachaTextCCoin">N/A</p>
                 <div id="gachaRubyIcon"></div> <p id="gachaTextRuby">N/A</p>
             </div>
-            <div class="animation-container">             
-                <img class="catcha SS" src="../images/game/gacha/SS.gif" style="display: none; z-index:99;">
-                <img class="catcha CATS" src="../images/game/gacha/CATS.gif" style="display: none; z-index:99;">
-                <img class="catcha S" src="../images/game/gacha/S.gif" style="display: none; z-index:99;">
-                <img class="catcha A" src="../images/game/gacha/A.gif" style="display: none; z-index:99;">
+            <div class="animation-container">
+                <button id="skipButton" style="display:none"></button>
+                <img class="catcha SS" src="../images/game/gacha/SS.gif" style="display: none; ">
+                <img class="catcha CATS" src="../images/game/gacha/CATS.gif" style="display: none;">
+                <img class="catcha S" src="../images/game/gacha/S.gif" style="display: none;">
+                <img class="catcha A" src="../images/game/gacha/A.gif" style="display: none;">
             </div>
            
             <div id="summon-buttons">
