--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/gachabutton.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/gachabutton.css
@@ -9,7 +9,19 @@
     justify-content: space-around;
     width: 400px;
 }
-
+#skipButton {
+    position: absolute;
+    background-image: url(/images/game/gacha/Skip.png);
+    margin-left: 300px;
+    margin-top: 20px;
+    height: 30px;
+    z-index: 99;
+    display: inline;
+    width: 65px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 9px;
+}
 #gachaCCoinIcon {
     position: absolute;
     background: transparent;
