--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -70,7 +70,6 @@
                                     aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form>
                                 <div class="form-group">
                                     <label>名稱：</label>
                                     <input type="text" class="form-control" id="create-name" name="Banner">
@@ -95,7 +94,6 @@
                                 style="width: 100%;">
                             儲存
                         </button>
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -129,7 +127,6 @@
                                     <th>名稱</th>
                                     <th>發佈時間</th>
                                     <th>圖片</th>
-                                    <th>預覽</th>
                                     <th>編輯/刪除</th>
                                 </tr>
                             </thead>
@@ -141,7 +138,7 @@
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="EditBannerModalToggleLabel">編輯 Edit</h5>
+                                    <h5 class="modal-title" id="EditBannerModalToggleLabel">編輯Banner</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                 </div>
@@ -172,7 +169,7 @@
                                                 <img id="previewImage" src="" alt="Image Preview" class="w-100 border">
                                             </div>
                                         </div>
-
+                                    <button type="submit" class="btn btn-secondary" data-id="${row.bannerId}" data-bs-toggle="modal" data-bs-target="#">預覽</button>
                                     <button type="submit" class="mt-3 btn btn-primary btn-block" name="submitButton-edior" id="submitButton-edior"
                                                     style="width: 100%;">儲存</button>
                                     </div>
@@ -248,12 +245,6 @@
                     "data": "link",
                     render: function (data, type, row) {
                         return `<img class="img-thumbnail" src="${data}" style="width: 200px; height: 150px;" >`;
-                    }
-                },
-                {
-                    "data": "bannerId",
-                    "render": function (data, type, row) {
-                        return `<button class="btn btn-secondary" data-id="${row.bannerId}" data-bs-toggle="modal" data-bs-target="#">預覽</button>`;
                     }
                 },
                 {
