--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -70,7 +70,6 @@
                             aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
                         <div class="form-group">
                             <!-- <label>ID：</label> -->
                             <input type="hidden" class="form-control" disabled readonly id="create-id" name="CouponId">
@@ -109,7 +108,6 @@
                                 style="width: 100%;">
                             儲存
                         </button>
-                    </form>
                 </div>
             </div>
         </div>
@@ -162,7 +160,6 @@
                                                 aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <form>
                                         <!--內容表單-->
                                         <div class="row">
                                             <div class="form-group">
@@ -199,7 +196,6 @@
                                                     style="width: 100%;">
                                                 儲存
                                             </button>
-                                            </form>
                                         </div>
                                         <!--內容表單-->
                                     </div>
@@ -221,23 +217,10 @@
                                     <div class="modal-body">
                                         <!--內容表單-->
                                         <div class="row">
-                                            <form>
                                     <div class="form-group">
-                                                <label>ID</label>
-                                                <input type="text" class="form-control" readonly disabled>
-                                            </div>
-                                    <div class="form-group">
-                                                <label>會員名稱</label>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                    <div class="form-group">
-                                                <label>會員帳號</label>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                    <div class="form-group">
-                                                <label>發送數量</label>
-                                                <input type="text" class="form-control">
-                                            </div>
+                                        <label>會員編號</label>
+                                        <input type="text" class="form-control" id="sent-memberID" name="MemberID" >
+                                    </div>
 
                                     <div class="form-group">
                                         <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendToMember" id=" SendToMember"
@@ -259,8 +242,6 @@
                                             </button>
                                         </div>
 
-
-                                                </form>
                                             </div>
 
                                         </div>
@@ -414,28 +395,38 @@
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        Swal.fire({
-                            icon: 'success',
-                            title: '編輯成功',
-                            text: response.message
-                        });
-
-                        $('#EditModalToggle').modal('hide');
-                        $('#Bonus-table').DataTable().ajax.reload();
-                    }
-                    else {
-                        Swal.fire({
-                            icon: 'error',
-                            title: '失敗',
-                            text: response.message
-                        });
+                        showSuccessMessage("編輯成功", response.message);
+                        closeModalAndReloadTable();
+                    } else {
+                        showErrorMessage("編輯失敗", response.message);
                     }
                 },
                 error: function (error) {
-                    console.log(error);
+                    console.error("AJAX Request Error:", error);
                 }
             });
-        })
+
+            function showSuccessMessage(title, message) {
+                Swal.fire({
+                    icon: 'success',
+                    title: title,
+                    text: message
+                });
+            }
+
+            function showErrorMessage(title, message) {
+                Swal.fire({
+                    icon: 'error',
+                    title: title,
+                    text: message
+                });
+            }
+
+            function closeModalAndReloadTable() {
+                $('#EditModalToggle').modal('hide');
+                $('#Bonus-table').DataTable().ajax.reload();
+            }
+        });
         //新增商品的儲存按鈕===========================
         $('#create-submitButton').click(function () {
             const id = $('#create-id').val();
@@ -541,7 +532,7 @@
             });
         });
 
-        //發送至會員=======================
+        //發送至所有會員=======================
         $(document).ready(function () {
             $(document).on("click", ".SendCouponToAllMembers", function () {
                 var couponId = $(this).data("id");
@@ -576,5 +567,40 @@
             });
         });
 
+        //發送至會員-依MemberID
+        $(document).ready(function () {
+            $(document).on("click", ".SendToMember", function () {
+                var couponId = $(this).data("id");
+                var memberId = $("#sent-memberID").val(); // 獲取輸入的 MemberId
+
+                Swal.fire({
+                    title: '確定要發送優惠券嗎?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '確認發送'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: "/AdminCMS/Bonus/SendCouponToMembersByID",
+                            type: "POST",
+                            data: { id: couponId, memberId: memberId }, // 傳遞 MemberId 到後端
+                            success: function (response) {
+                                if (response.success) {
+                                    console.log("發送成功");
+                                    $('#sendtoMember').modal('hide');
+                                } else {
+                                    console.log("發送失敗");
+                                }
+                            },
+                            error: function (error) {
+                                console.log("發生錯誤：", error);
+                            }
+                        });
+                    }
+                });
+            });
+        });
     </script>
 }
