--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -40,6 +40,8 @@
             width: 200px;
             height: 40px;
         }
+
+
     </style>
 }
 
@@ -58,7 +60,7 @@
 
     <div class="row mt-3">
         <div class="col-6 offset-6 text-end">
-            <button class="btn btn-success" data-bs-toggle="modal" href="#" role="button">
+            <button class="btn btn-success" data-bs-toggle="modal" href="#sendtoMember" role="button">
                 補發遊戲商品
             </button>
         </div>
@@ -166,6 +168,43 @@
     </div>
     <!---新增遊戲商品 modal-->
 
+<!--發送至會員-->
+<div class="modal fade" id="sendtoMember" aria-hidden="true"
+     aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalToggleLabel">發送至會員</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!--內容表單-->
+                <div class="row">
+                        <div class="form-group">
+                            <label>會員編號</label>
+                            <input type="text" class="form-control" id="sent-memberID" name="MemberID">
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendToMember" id=" SendToMember"
+                                    style="width: 50%;">
+                                發送
+                            </button>
+                            </div>
+                </div>
+
+            </div>
+            <!--內容表單-->
+        </div>
+    </div>
+</div>
+
+<!--發送至會員-->
+
+
+
+
     <!---篩選類別-->
     <div class="container-fluid mt-4 mb-3">
     <div class="row align-items-center" style="margin-left:20px">
@@ -180,12 +219,11 @@
                                 }
                 </select>
         </div>
-        <div>
-            <button id="selectAllBtn">全選</button>
-        </div>
     </div>
     <!---篩選類別-->
-
+    <div style="margin-left:20px">
+        <button class="btn btn-primary" id="selectAllBtn">全選</button>
+    </div>
     <div class="container-fluid mt-4">
         <div class="row">
             <div class="col-12">
@@ -353,16 +391,14 @@
                 "columns": [
                     {
                     data: null,
-                    orderable: false,
                     render: function (data, type, row, meta) {
                         return '';
                     }
                     },
                     {
-                    data: null, // Checkbox
-                    orderable: false,
+                    data: null,
                     render: function (data, type, row, meta) {
-                        return `<input class="form-check-input" type="checkbox" data-id="${row.productId}">`;
+                        return `<input class="form-check-input-lg row-checkbox" type="checkbox" data-id="${row.productId}">`;
                     }
                     },
                     { "data": "productId" },
@@ -656,6 +692,81 @@
                                 text: message
                             });
                         }
+                    }
+                });
+            });
+        });
+
+        // 全選按鈕
+        var selectedids = [];
+        $('#selectAllBtn').on('click', function () {
+            var $checkboxes = $('.row-checkbox');
+            var isCheckedAll = $checkboxes.not(':checked').length === 0;
+
+            if (isCheckedAll) {
+                $checkboxes.prop('checked', false);
+                selectedids = [];
+            } else {
+                $checkboxes.prop('checked', true);
+                selectedids = [];
+                $checkboxes.each(function () {
+                    var idValue = $(this).data('productId');
+                    selectedids.push(idValue);
+                });
+            }
+
+            console.log('選擇的商品id:', selectedids);
+        });
+
+        $('#GProduct-table tbody').on('change', '.row-checkbox', function () {
+            var isChecked = $(this).is(':checked');
+            var $row = $(this).closest('tr');
+            var idValue = $(this).data('productId'); 
+            if (isChecked) {
+                $row.find('td').addClass('selected-cell');
+                selectedids.push(idValue); 
+                console.log('選擇的商品id:', selectedids);
+            } else {
+                $row.find('td').removeClass('selected-cell');
+                var index = selectedids.indexOf(idValue);
+                if (index !== -1) {
+                    selectedids.splice(index, 1); 
+                    console.log('選擇的商品id:', selectedids);
+                }
+            }
+        });
+
+        //發送至會員-依MemberID
+        $(document).ready(function () {
+            $(document).on("click", ".SendToMember", function () {
+                var productId = $(this).data("id");
+                var memberId = $("#sent-memberID").val(); // 獲取輸入的 MemberId
+
+                Swal.fire({
+                    title: '確定要發送商品嗎?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '確認發送'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: "/AdminCMS/GameProduct/SendCouponToMembersByID",
+                            type: "POST",
+                            data: { id: couponId, memberId: memberId }, // 傳遞 MemberId 到後端
+                            success: function (response) {
+                                if (response.success) {
+                                    console.log("發送成功");
+                                    $('#sendtoMember').modal('hide');
+                                } else {
+                                    console.log("發送失敗");
+                                }
+                            },
+                            error: function (error) {
+                                console.log("發生錯誤：", error);
+                            }
+                        });
                     }
                 });
             });
